--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>My Game</title>
+    <title>SURVIVAL M</title>
     <link rel="icon" type="image/GIF" href="res/favicon.ico"/>
     <meta name="viewport" content="width=800,target-densitydpi=device-dpi,user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes"/>
@@ -20,8 +20,12 @@
         }
     </style>
 </head>
-<body style="padding:0; margin: 0; background: #000;">
+<body style="padding: 0; margin: 0; background: #000;">
 <canvas id="gameCanvas" width="800" height="600"></canvas>
+
+<p><font color="white">Press P to pause.</font></p>
+<p><font color="white">Press R to restart.</font></p>
+
 <script src="cocos2d.js"></script>
 </body>
 </html>
